Assignment_6/ass6_21CS10057_21CS30058.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


State 343 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOATING_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE expression RIGHT_SQUARE
    9                   | postfix_expression LEFT_PARENTHESIS RIGHT_PARENTHESIS
   10                   | postfix_expression LEFT_PARENTHESIS argument_expression_list RIGHT_PARENTHESIS
   11                   | postfix_expression DOT IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression SELF_INCREASE
   14                   | postfix_expression SELF_DECREASE
   15                   | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS LEFT_CURLY initializer_list RIGHT_CURLY
   16                   | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS LEFT_CURLY initializer_list COMMA RIGHT_CURLY

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | SELF_INCREASE unary_expression
   21                 | SELF_DECREASE unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS

   25 unary_operator: BITWISE_AND
   26               | MUL
   27               | PLUS
   28               | SUBTRACT
   29               | BITWISE_NOR
   30               | EXCLAMATION

   31 cast_expression: unary_expression
   32                | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression MUL cast_expression
   35                          | multiplicative_expression F_SLASH cast_expression
   36                          | multiplicative_expression MODULO cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression SUBTRACT multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_SHIFT additive_expression
   42                 | shift_expression RIGHT_SHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression LESS_THAN shift_expression
   45                      | relational_expression GREATER_THAN shift_expression
   46                      | relational_expression LESS_THAN_EQUAL shift_expression
   47                      | relational_expression GREATER_THAN_EQUAL shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQUAL relational_expression
   50                    | equality_expression NOT_EQUAL relational_expression

   51 and_expression: equality_expression
   52               | and_expression BITWISE_AND equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression BITWISE_XOR and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression LOGICAL_OR M logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression N QUESTION_MARK M expression N COLON M conditional_expression

   63 M: ε

   64 N: ε

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: ASSIGN_
   68                    | MUL_ASSIGN
   69                    | F_SLASH_ASSIGN
   70                    | MODULO_ASSIGN
   71                    | PLUSASSIGN
   72                    | SUBTRACT_ASSIGN
   73                    | LEFT_SHIFT_ASSIGN
   74                    | RIGHT_SHIFT_ASSIGN
   75                    | BITWISE_AND_ASSIGN
   76                    | BITWISE_XOR_ASSIGN
   77                    | BITWISE_OR_ASSIGN

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list SEMICOLON
   82            | declaration_specifiers SEMICOLON

   83 declaration_specifiers: storage_class_specifier declaration_specifiers
   84                       | storage_class_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_specifier
   87                       | type_qualifier declaration_specifiers
   88                       | type_qualifier
   89                       | function_specifier declaration_specifiers
   90                       | function_specifier

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator ASSIGN_ initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID_
  100               | CHAR_
  101               | SHORT
  102               | INT_
  103               | LONG
  104               | FLOAT_
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL_
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | ε

  116 enum_specifier: ENUM LEFT_CURLY enumerator_list RIGHT_CURLY
  117               | ENUM IDENTIFIER LEFT_CURLY enumerator_list RIGHT_CURLY
  118               | ENUM IDENTIFIER LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  119               | ENUM IDENTIFIER

  120 enumerator_list: enumerator
  121                | enumerator_list COMMA enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER ASSIGN_ constant_expression

  124 type_qualifier: CONST
  125               | RESTRICT
  126               | VOLATILE

  127 function_specifier: INLINE

  128 declarator: pointer direct_declarator
  129           | direct_declarator

  130 direct_declarator: IDENTIFIER
  131                  | LEFT_PARENTHESIS declarator RIGHT_PARENTHESIS
  132                  | direct_declarator LEFT_SQUARE type_qualifier_list_opt RIGHT_SQUARE
  133                  | direct_declarator LEFT_SQUARE type_qualifier_list_opt assignment_expression RIGHT_SQUARE
  134                  | direct_declarator LEFT_SQUARE STATIC type_qualifier_list assignment_expression RIGHT_SQUARE
  135                  | direct_declarator LEFT_SQUARE type_qualifier_list STATIC assignment_expression RIGHT_SQUARE
  136                  | direct_declarator LEFT_SQUARE type_qualifier_list_opt MUL RIGHT_SQUARE
  137                  | direct_declarator LEFT_PARENTHESIS parameter_type_list_opt RIGHT_PARENTHESIS
  138                  | direct_declarator LEFT_PARENTHESIS identifier_list RIGHT_PARENTHESIS

  139 parameter_type_list_opt: parameter_type_list
  140                        | ε

  141 type_qualifier_list_opt: type_qualifier_list
  142                        | ε

  143 pointer: MUL type_qualifier_list
  144        | MUL
  145        | MUL type_qualifier_list pointer
  146        | MUL pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list COMMA ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list COMMA parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list COMMA IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | LEFT_CURLY initializer_list RIGHT_CURLY
  160            | LEFT_CURLY initializer_list COMMA RIGHT_CURLY

  161 initializer_list: designation_opt initializer
  162                 | initializer_list COMMA designation_opt initializer

  163 designation_opt: designation
  164                | ε

  165 designation: designator_list ASSIGN_

  166 designator_list: designator
  167                | designator_list designator

  168 designator: LEFT_SQUARE constant_expression RIGHT_SQUARE
  169           | DOT IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER COLON statement
  177                  | CASE constant_expression COLON statement
  178                  | DEFAULT COLON statement

  179 compound_statement: LEFT_CURLY RIGHT_CURLY
  180                   | LEFT_CURLY block_item_list RIGHT_CURLY

  181 block_item_list: block_item
  182                | block_item_list M block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: expression SEMICOLON
  186                     | SEMICOLON

  187 selection_statement: IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N
  188                    | IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N ELSE M statement N
  189                    | SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement

  190 iteration_statement: WHILE M LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement
  191                    | DO M statement M WHILE LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS SEMICOLON
  192                    | FOR LEFT_PARENTHESIS expression_statement M expression_statement N M expression N RIGHT_PARENTHESIS M statement

  193 jump_statement: GOTO_ IDENTIFIER SEMICOLON
  194               | CONTINUE SEMICOLON
  195               | BREAK SEMICOLON
  196               | RETURN_ SEMICOLON
  197               | RETURN_ expression SEMICOLON

  198 translation_unit: external_declaration
  199                 | translation_unit external_declaration

  200 external_declaration: function_definition
  201                     | declaration

  202 function_definition: declaration_specifiers declarator declaration_list compound_statement
  203                    | function_prototype compound_statement

  204 function_prototype: declaration_specifiers declarator

  205 declaration_list: declaration
  206                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 97
    BREAK (259) 195
    CASE (260) 177
    CHAR_ (261) 100
    CONST (262) 124
    CONTINUE (263) 194
    DEFAULT (264) 178
    DO (265) 191
    DOUBLE (266) 105
    ELSE (267) 188
    ENUM (268) 116 117 118 119
    EXTERN (269) 95
    FLOAT_ (270) 104
    FOR (271) 192
    GOTO_ (272) 193
    IF (273) 187 188
    INLINE (274) 127
    INT_ (275) 102
    LONG (276) 103
    REGISTER (277) 98
    RESTRICT (278) 125
    RETURN_ (279) 196 197
    SHORT (280) 101
    SIGNED (281) 106
    SIZEOF (282) 23 24
    STATIC (283) 96 134 135
    STRUCT (284)
    SWITCH (285) 189
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 107
    VOID_ (289) 99
    VOLATILE (290) 126
    WHILE (291) 190 191
    BOOL_ (292) 108
    COMPLEX (293) 109
    IMAGINARY (294) 110
    LEFT_SQUARE (295) 8 132 133 134 135 136 168
    RIGHT_SQUARE (296) 8 132 133 134 135 136 168
    LEFT_PARENTHESIS (297) 6 9 10 15 16 24 32 131 137 138 187 188 189 190 191 192
    RIGHT_PARENTHESIS (298) 6 9 10 15 16 24 32 131 137 138 187 188 189 190 191 192
    LEFT_CURLY (299) 15 16 116 117 118 159 160 179 180
    RIGHT_CURLY (300) 15 16 116 117 118 159 160 179 180
    DOT (301) 11 169
    ARROW (302) 12
    SELF_INCREASE (303) 13 20
    SELF_DECREASE (304) 14 21
    BITWISE_AND (305) 25 52
    MUL (306) 26 34 136 143 144 145 146
    PLUS (307) 27 38
    SUBTRACT (308) 28 39
    BITWISE_NOR (309) 29
    EXCLAMATION (310) 30
    F_SLASH (311) 35
    MODULO (312) 36
    LEFT_SHIFT (313) 41
    RIGHT_SHIFT (314) 42
    LESS_THAN (315) 44
    GREATER_THAN (316) 45
    LESS_THAN_EQUAL (317) 46
    GREATER_THAN_EQUAL (318) 47
    EQUAL (319) 49
    NOT_EQUAL (320) 50
    BITWISE_XOR (321) 54
    BITWISE_OR (322) 56
    LOGICAL_AND (323) 58
    LOGICAL_OR (324) 60
    QUESTION_MARK (325) 62
    COLON (326) 62 176 177 178
    SEMICOLON (327) 81 82 185 186 191 193 194 195 196 197
    ELLIPSIS (328) 150
    ASSIGN_ (329) 67 94 123 165
    MUL_ASSIGN (330) 68
    F_SLASH_ASSIGN (331) 69
    MODULO_ASSIGN (332) 70
    PLUSASSIGN (333) 71
    SUBTRACT_ASSIGN (334) 72
    LEFT_SHIFT_ASSIGN (335) 73
    RIGHT_SHIFT_ASSIGN (336) 74
    BITWISE_AND_ASSIGN (337) 75
    BITWISE_XOR_ASSIGN (338) 76
    BITWISE_OR_ASSIGN (339) 77
    COMMA (340) 16 18 79 92 118 121 150 152 156 160 162
    HASH (341)
    IDENTIFIER <str> (342) 1 11 12 117 118 119 122 123 130 155 156 169 176 193
    INTEGER_CONSTANT <intval> (343) 2
    FLOATING_CONSTANT <floatval> (344) 3
    CHAR_CONSTANT <charval> (345) 4
    STRING_LITERAL <str> (346) 5


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    primary_expression <expr> (93)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression <expr> (94)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 8 9 10 11 12 13 14 19
    argument_expression_list <parameterList> (95)
        on left: 17 18
        on right: 10 18
    unary_expression <expr> (96)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 66
    unary_operator <charval> (97)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <expr> (98)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <expr> (99)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <expr> (100)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <expr> (101)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <expr> (102)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <expr> (103)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression <expr> (104)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression <expr> (105)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression <expr> (106)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression <expr> (107)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression <expr> (108)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <expr> (109)
        on left: 61 62
        on right: 62 65 80
    M <expr> (110)
        on left: 63
        on right: 58 60 62 182 187 188 190 191 192
    N <expr> (111)
        on left: 64
        on right: 62 187 188 190 191 192
    assignment_expression <expr> (112)
        on left: 65 66
        on right: 17 18 66 78 79 133 134 135 158
    assignment_operator (113)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <expr> (114)
        on left: 78 79
        on right: 6 8 62 79 185 187 188 189 190 191 192 197
    constant_expression (115)
        on left: 80
        on right: 123 168 177
    declaration (116)
        on left: 81 82
        on right: 183 201 205 206
    declaration_specifiers <dtype> (117)
        on left: 83 84 85 86 87 88 89 90
        on right: 81 82 83 85 87 89 153 154 202 204
    init_declarator_list <decList> (118)
        on left: 91 92
        on right: 81 92
    init_declarator <dec> (119)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (120)
        on left: 95 96 97 98
        on right: 83 84
    type_specifier <dtype> (121)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 85 86 112
    specifier_qualifier_list (122)
        on left: 112 113
        on right: 114 157
    specifier_qualifier_list_opt (123)
        on left: 114 115
        on right: 112 113
    enum_specifier (124)
        on left: 116 117 118 119
        on right: 111
    enumerator_list (125)
        on left: 120 121
        on right: 116 117 118 121
    enumerator (126)
        on left: 122 123
        on right: 120 121
    type_qualifier (127)
        on left: 124 125 126
        on right: 87 88 113 147 148
    function_specifier (128)
        on left: 127
        on right: 89 90
    declarator <dec> (129)
        on left: 128 129
        on right: 93 94 131 153 202 204
    direct_declarator <dec> (130)
        on left: 130 131 132 133 134 135 136 137 138
        on right: 128 129 132 133 134 135 136 137 138
    parameter_type_list_opt <parameterList> (131)
        on left: 139 140
        on right: 137
    type_qualifier_list_opt (132)
        on left: 141 142
        on right: 132 133 136
    pointer <intval> (133)
        on left: 143 144 145 146
        on right: 128 145 146
    type_qualifier_list (134)
        on left: 147 148
        on right: 134 135 141 143 145 148
    parameter_type_list <parameterList> (135)
        on left: 149 150
        on right: 139
    parameter_list <parameterList> (136)
        on left: 151 152
        on right: 149 150 152
    parameter_declaration <parameter> (137)
        on left: 153 154
        on right: 151 152
    identifier_list (138)
        on left: 155 156
        on right: 138 156
    type_name (139)
        on left: 157
        on right: 15 16 24 32
    initializer <expr> (140)
        on left: 158 159 160
        on right: 94 161 162
    initializer_list <dec> (141)
        on left: 161 162
        on right: 15 16 159 160 162
    designation_opt (142)
        on left: 163 164
        on right: 161 162
    designation (143)
        on left: 165
        on right: 163
    designator_list (144)
        on left: 166 167
        on right: 165 167
    designator (145)
        on left: 168 169
        on right: 166 167
    statement <expr> (146)
        on left: 170 171 172 173 174 175
        on right: 176 177 178 184 187 188 189 190 191 192
    labeled_statement <expr> (147)
        on left: 176 177 178
        on right: 170
    compound_statement <expr> (148)
        on left: 179 180
        on right: 171 202 203
    block_item_list <expr> (149)
        on left: 181 182
        on right: 180 182
    block_item <expr> (150)
        on left: 183 184
        on right: 181 182
    expression_statement <expr> (151)
        on left: 185 186
        on right: 172 192
    selection_statement <expr> (152)
        on left: 187 188 189
        on right: 173
    iteration_statement <expr> (153)
        on left: 190 191 192
        on right: 174
    jump_statement <expr> (154)
        on left: 193 194 195 196 197
        on right: 175
    translation_unit (155)
        on left: 198 199
        on right: 0 199
    external_declaration (156)
        on left: 200 201
        on right: 198 199
    function_definition (157)
        on left: 202 203
        on right: 200
    function_prototype <dec> (158)
        on left: 204
        on right: 203
    declaration_list (159)
        on left: 205 206
        on right: 202 206


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31
    function_prototype       go to state 32


State 1

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR_ •

    $default  reduce using rule 100 (type_specifier)


State 3

  124 type_qualifier: CONST •

    $default  reduce using rule 124 (type_qualifier)


State 4

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM • LEFT_CURLY enumerator_list RIGHT_CURLY
  117               | ENUM • IDENTIFIER LEFT_CURLY enumerator_list RIGHT_CURLY
  118               | ENUM • IDENTIFIER LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  119               | ENUM • IDENTIFIER

    LEFT_CURLY  shift, and go to state 33
    IDENTIFIER  shift, and go to state 34


State 6

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT_ •

    $default  reduce using rule 104 (type_specifier)


State 8

  127 function_specifier: INLINE •

    $default  reduce using rule 127 (function_specifier)


State 9

  102 type_specifier: INT_ •

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  125 type_qualifier: RESTRICT •

    $default  reduce using rule 125 (type_qualifier)


State 13

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID_ •

    $default  reduce using rule 99 (type_specifier)


State 18

  126 type_qualifier: VOLATILE •

    $default  reduce using rule 126 (type_qualifier)


State 19

  108 type_specifier: BOOL_ •

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 22

  201 external_declaration: declaration •

    $default  reduce using rule 201 (external_declaration)


State 23

   81 declaration: declaration_specifiers • init_declarator_list SEMICOLON
   82            | declaration_specifiers • SEMICOLON
  202 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  204 function_prototype: declaration_specifiers • declarator

    LEFT_PARENTHESIS  shift, and go to state 35
    MUL               shift, and go to state 36
    SEMICOLON         shift, and go to state 37
    IDENTIFIER        shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 24

   83 declaration_specifiers: storage_class_specifier • declaration_specifiers
   84                       | storage_class_specifier •

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: type_specifier • declaration_specifiers
   86                       | type_specifier •

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  111 type_specifier: enum_specifier •

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier • declaration_specifiers
   88                       | type_qualifier •

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   89 declaration_specifiers: function_specifier • declaration_specifiers
   90                       | function_specifier •

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit • $end
  199 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31
    function_prototype       go to state 32


State 30

  198 translation_unit: external_declaration •

    $default  reduce using rule 198 (translation_unit)


State 31

  200 external_declaration: function_definition •

    $default  reduce using rule 200 (external_declaration)


State 32

  203 function_definition: function_prototype • compound_statement

    LEFT_CURLY  shift, and go to state 50

    compound_statement  go to state 51


State 33

  116 enum_specifier: ENUM LEFT_CURLY • enumerator_list RIGHT_CURLY

    IDENTIFIER  shift, and go to state 52

    enumerator_list  go to state 53
    enumerator       go to state 54


State 34

  117 enum_specifier: ENUM IDENTIFIER • LEFT_CURLY enumerator_list RIGHT_CURLY
  118               | ENUM IDENTIFIER • LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  119               | ENUM IDENTIFIER •

    LEFT_CURLY  shift, and go to state 55

    $default  reduce using rule 119 (enum_specifier)


State 35

  131 direct_declarator: LEFT_PARENTHESIS • declarator RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 35
    MUL               shift, and go to state 36
    IDENTIFIER        shift, and go to state 38

    declarator         go to state 56
    direct_declarator  go to state 42
    pointer            go to state 43


State 36

  143 pointer: MUL • type_qualifier_list
  144        | MUL •
  145        | MUL • type_qualifier_list pointer
  146        | MUL • pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    MUL       shift, and go to state 36

    $default  reduce using rule 144 (pointer)

    type_qualifier       go to state 57
    pointer              go to state 58
    type_qualifier_list  go to state 59


State 37

   82 declaration: declaration_specifiers SEMICOLON •

    $default  reduce using rule 82 (declaration)


State 38

  130 direct_declarator: IDENTIFIER •

    $default  reduce using rule 130 (direct_declarator)


State 39

   81 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   92 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 60
    COMMA      shift, and go to state 61


State 40

   91 init_declarator_list: init_declarator •

    $default  reduce using rule 91 (init_declarator_list)


State 41

   93 init_declarator: declarator •
   94                | declarator • ASSIGN_ initializer
  202 function_definition: declaration_specifiers declarator • declaration_list compound_statement
  204 function_prototype: declaration_specifiers declarator •

    AUTO       shift, and go to state 1
    CHAR_      shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_     shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_       shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_      shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    ASSIGN_    shift, and go to state 62

    LEFT_CURLY  reduce using rule 204 (function_prototype)
    $default    reduce using rule 93 (init_declarator)

    declaration              go to state 63
    declaration_specifiers   go to state 64
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 65


State 42
